Bug 1378141: Make 32-bit a11y builds make more thorough checks to determine which manifest to load; r=eeejay

MozReview-Commit-ID: 6Hx7ggqt9Ck

--HG--
extra : histedit_source : 28db28e939c947361988cb8e3c8d7932787cf47e