ipc/mscom/MainThreadRuntime.cpp
@@ -6,11 +6,13 @@
 
 #include "mozilla/mscom/MainThreadRuntime.h"
 
+#if defined(ACCESSIBILITY)
+#include "mozilla/a11y/Compatibility.h"
+#endif
 #include "mozilla/ArrayUtils.h"
 #include "mozilla/Assertions.h"
 #include "mozilla/RefPtr.h"
 #include "mozilla/UniquePtr.h"
-#include "mozilla/WindowsVersion.h"
 #include "nsWindowsHelpers.h"
 #include "nsXULAppAPI.h"
 
@@ -34,29 +36,6 @@ struct LocalFreeDeleter
 // This API from oleaut32.dll is not declared in Windows SDK headers
 extern "C" void __cdecl SetOaNoCache(void);
 
-#if defined(ACCESSIBILITY)
-static WORD
-GetActCtxResourceId()
-{
-  // The manifest for 32-bit Windows is embedded with resource ID 32.
-  // The manifest for 64-bit Windows is embedded with resource ID 64.
-  // Beginning with Windows 10 Creators Update, 32-bit builds use the 64-bit
-  // manifest.
-  WORD actCtxResourceId;
-#if defined(HAVE_64BIT_BUILD)
-  actCtxResourceId = 64;
-#else
-  if (mozilla::IsWin10CreatorsUpdateOrLater()) {
-    actCtxResourceId = 64;
-  } else {
-    actCtxResourceId = 32;
-  }
-#endif // defined(HAVE_64BIT_BUILD)
-
-  return actCtxResourceId;
-}
-#endif // defined(ACCESSIBILITY)
-
 namespace mozilla {
 namespace mscom {
 
@@ -65,7 +44,7 @@ MainThreadRuntime* MainThreadRuntime::sInstance = nullptr;
 MainThreadRuntime::MainThreadRuntime()
   : mInitResult(E_UNEXPECTED)
 #if defined(ACCESSIBILITY)
-  , mActCtxRgn(::GetActCtxResourceId())
+  , mActCtxRgn(a11y::Compatibility::GetActCtxResourceId())
 #endif // defined(ACCESSIBILITY)
 {
   // We must be the outermost COM initialization on this thread. The COM runtime
